# review-sentiment-mlops

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  build.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements-serve.txt  requirements.txt
app/: main.py  metrics.py  model.py  schema.py
models/sentimentv1/: model.safetensors
models/sentimentv1/checkpoint-12867/: config.json  optimizer.pt  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
models/sentimentv1/checkpoint-8578/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
onnx_model/: model.int8.onnx  model.onnx
schemas/: index.json  sentiment_batch_request_v1.json  sentiment_batch_response_v1.json  sentiment_job_result_v1.json  sentiment_job_start_v1.json  sentiment_job_status_v1.json  sentiment_request_v1.json  sentiment_response_v1.json
scripts/: export_schemas.py  plot_locust_results.py
tests/data/: reviews.json
tests/fixtures/: sample_reviews.json
tests/test_api/: conftest.py  test_endpoints.py
tests/test_preprocess/: conftest.py  test_edge_cases.py  test_labels.py  test_prepare_sentence_datasets.py  test_sentence_segmentation.py
tests/test_schemas/: test_job_start.py
training/: config.yaml  config_loader.py  preprocess.py  train.py
utils/: export_quantize_onnx.py  locustfile.py  locustfile_stages.py
