[project]
name = "review-sentiment-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "en-core-web-md==3.8.0",
    "evaluate>=0.4.6",
    "mlflow>=3.14.0",
    "notebook>=7.6.0",
    "onnx>=1.22.0",
    "onnxruntime>=1.24.3",
    "optimum[onnx]>=1.27.0",
    "pytest>=9.1.1",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.14",
]

[dependency-groups]
dev = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.3.0",
    "pandas>=2.3.3,<3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.6.0",
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "transformers>=5.12.1",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
